# TeamPlanner

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  teamplanner.db
app/: __init__.py  config.py  crud.py  db.py  main.py  models.py  schemas.py
docs/: DOCUMENTATION.md
static/: index.html  planning.html  planning.js  styles.css  users.js
tests/: conftest.py  test_api.py
